# GrandGitMaster

./: .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  docker-compose.yml  ggm  playbooks.js  pyproject.toml  sw.js
.github/workflows/: pages.yml  ringer.yml  tests.yml
data/: LEADERBOARD.md  champions.json
grandgitmaster/: __init__.py  categorize.py  cli.py  db.py  export.py  github.py  mcp_server.py  ringer.py  scouts.py  server.py  webapp.py  xwatcher.py
product/: 4090-FAST-CASH.md  4090-MONEY-MACHINE.md  4090-STARTER-BATCH.md  LAUNCH-KIT.md  outreach-tracker.csv  phone-ai-income-starter-pack.html
seeds/: repos.txt  x_watchlist.txt
tests/: test_ggm.py
web/: autopilot.js  index.html  manifest.json
