[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grandgitmaster"
version = "0.1.0"
description = "The king of Git — collect repos from anywhere, rank them, crown the best per category. Zero dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["git", "github", "ranking", "mcp", "agents", "x", "twitter", "pwa"]

[project.scripts]
ggm = "grandgitmaster.cli:main"

[tool.setuptools]
packages = ["grandgitmaster"]
